updated folder name to be netlify compatible

--- a/galerie.html
+++ b/galerie.html
@@ -344,77 +344,77 @@
       <div class="img-gallery" id="galerie-7">
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/C0093T01.JPG"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/C0093T01.JPG"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_202244.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_202244.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_202336.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_202336.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_202656.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_202656.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_202829.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_202829.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203021.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203021.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203108.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203108.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203155.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203155.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203337.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203337.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203438.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203438.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203539.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_203539.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_204019.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_204019.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_220144__1_.png"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/Screenshot_2024-01-30_220144__1_.png"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/WhatsApp_Image_2024-03-29_at_09.27.55_2edceb70.jpg"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/WhatsApp_Image_2024-03-29_at_09.27.55_2edceb70.jpg"
           onclick="openFullImg(this.src, 7)"
         />
         <img
           class="square-image"
-          src="assets/images/Galerie/Regionala%20FTC%20%238,%2026-28%20ianuarie%202024/WhatsApp_Image_2024-03-29_at_09.27.55_41912982.jpg"
+          src="assets/images/Galerie/Regionala%20FTC nr.8,%2026-28%20ianuarie%202024/WhatsApp_Image_2024-03-29_at_09.27.55_41912982.jpg"
           onclick="openFullImg(this.src, 7)"
         />
       </div>
