--- a/formular.html
+++ b/formular.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="icon" href="assets/images/Icons/tab_icon.png" type="image/x-icon">
     
+    <link rel="icon" href="assets/images/Icons/tab_icon.png" type="image/x-icon">
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +21,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="assets/css/bttb.css" />
-    <link rel="stylesheet" href="assets/css/echipa.css" />
+    <link rel="stylesheet" href="assets/css/galerie.css" />
     <link rel="stylesheet" href="assets/css/navbar.css" />
     <link rel="stylesheet" href="assets/css/footer.css" />
     <link rel="stylesheet" href="assets/css/scroll-bar.css" />
@@ -30,7 +30,8 @@
       href="assets/images/about.png"
       type="image/x-icon"
     />
-    <title>ZENITH</title>
+    <title> Zenith </title>
+
   </head>
   <body class="custom-bg" id="top">
     <!-- Navbar -->
@@ -104,132 +105,32 @@
       </div>
     </nav>
 
-    <!-- Prezentare -->
-    <section class="about-us">
-      <div class="container-a">
-        <div class="image-a">
-          <img src="assets/images/Echipa/IMG_0437.JPG" alt="" />
+    <!-- Contact page -->
+    
+    <div class="container" style = "padding-top: 200px;">
+    <h1>Contactează-ne</h1>
+    <form target="_blank" action="https://formsubmit.co/7826dc35be59c6cb00c94454cc1195eb" method="POST">
+        <div class="form-group">
+            <div class="form-row">
+                <div class="col">
+                    <input type="text" name="name" class="form-control" placeholder="Numele complet" required>
+                </div>
+                <div class="col">
+                    <input type="email" name="email" class="form-control" placeholder="Adresa de mail" required>
+                </div>
+            </div>
         </div>
-        <div class="text-about">
-          <div class="text-desc">
-            <p>
-              Faceți cunoștință cu liceeni pasionați de ştiinţele exacte, dornici să lucreze în echipă pentru a învăţa şi pentru a încuraja în continuare elevii din liceul nostru să se implice, depăşindu-şi limitele!
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+        <div class="form-group">
+            <textarea placeholder="Mesajul tău" class="form-control" name="message" rows="10" required></textarea>
+        </div> <br>
 
-    <!-- Echipa -->
-    <div class="team-area">
-      <div class="section-title">
-        <span class="custom-span"> Membri echipei </span>
-      </div>
-      <div class="item-links">
-        <span class="item-link menu-active" data-name="all">Toți membrii</span>
-        <span class="item-link" data-name="mecanica">Mecanică</span>
-        <span class="item-link" data-name="programare">Programare</span>
-        <span class="item-link" data-name="grafica">PR & Marketing</span>
-        <span class="item-link" data-name="pr">Grafică</span>
-      </div>
-
-      <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
-      <div class="team-box">
-        <!-- Membru 1 -->
-        <div class="box" data-name="mecanica">
-          <img src="assets/images/Membri/Ioana Preda.JPG" alt="" />
-          <h2>Ioana Preda</h2>
-          <span>Team leader, membru Mecanică</span>
-        </div>
-        <!-- Membru 2 -->
-        <div class="box" data-name="mecanica">
-          <img src="assets/images/Membri/Serghei Țirulnic.JPG" alt="" />
-          <h2>Serghei Țirulnic</h2>
-          <span>Lider Mecanică</span>
-        </div>
-        <!-- Membru 3 -->
-        <div class="box" data-name="mecanica">
-          <img src="assets/images/Membri/Ionuț Ghiță.JPG" alt="" />
-          <h2>Ionuț Ghiță</h2>
-          <span>Mecanică</span>
-        </div>
-        <!-- Membru 4 -->
-        <div class="box" data-name="mecanica">
-          <img src="assets/images/Membri/Lucian Bobîrsc.JPG" alt="" />
-          <h2>Lucian Bobîrsc</h2>
-          <span>Mecanică</span>
-        </div>
-        <!-- Membru 5 -->
-        <div class="box" data-name="mecanica">
-          <img src="assets/images/Membri/Matei Neamțu.JPG" alt="" />
-          <h2>Matei Neamțu</h2>
-          <span>Mecanică</span>
-        </div>
-        <!-- Membru 6 -->
-        <div class="box" data-name="mecanica">
-          <img src="assets/images/Membri/Alex Velea.JPG" alt="" />
-          <h2>Alex Velea</h2>
-          <span>Mecanică</span>
-        </div>
-        <!-- Membru 7 -->
-        <div class="box" data-name="mecanica">
-          <img src="assets/images/Membri/Călin Tudor.JPG" alt="" />
-          <h2>Călin Tudor</h2>
-          <span>Mecanică</span>
-        </div>
-        <!-- Membru 8 -->
-        <div class="box" data-name="mecanica">
-          <img src="assets/images/Membri/Robert Ciocan.JPG" alt="" />
-          <h2>Robert Ciocan </h2>
-          <span>Mecanică</span>
-        </div>
-        <!-- Membru 9 -->
-        <div class="box" data-name="programare">
-          <img src="assets/images/Membri/Călin Crânguș.JPG" alt="" />
-          <h2>Călin Crânguș</h2>
-          <span>Lider Programare</span>
-        </div>
-        <!-- Membru 10 -->
-        <div class="box" data-name="programare">
-          <img src="assets/images/Membri/Bogdan Grecu.JPG" alt="" />
-          <h2>Bogdan Grecu</h2>
-          <span>Programare</span>
-        </div>
-        <!-- Membru 11 -->
-        <div class="box" data-name="grafica">
-          <img src="assets/images/Membri/Irina Nicolescu.JPG" alt="" />
-          <h2>Irina Nicolescu</h2>
-          <span>Lider PR & Marketing</span>
-        </div>
-        <!-- Membru 12 -->
-        <div class="box" data-name="grafica">
-          <img src="assets/images/Membri/Catinca Drăghiescu.JPG" alt="" />
-          <h2>Catinca Drăghiescu</h2>
-          <span>PR & Marketing</span>
-        </div>
-        <!-- Membru 13 -->
-        <div class="box" data-name="grafica">
-          <img src="assets/images/Membri/Denisa Ionescu.JPG" alt="" />
-          <h2>Denisa Ionescu</h2>
-          <span>PR & Marketing</span>
-        </div>
-        <!-- Membru 14 -->
-        <div class="box" data-name="pr">
-          <img src="assets/images/Membri/Iasmina Petcu.JPG" alt="" />
-          <h2>Iasmina Petcu</h2>
-          <span>Lider Grafică</span>
-        </div>
-        <!-- Membru 15 -->
-        <div class="box" data-name="pr">
-          <img src="assets/images/Membri/Maria Răducanu.JPG" alt="" />
-          <h2>Maria Răducanu</h2>
-          <span>Grafică</span>
-        </div>
-      </div>
+        <input type="hidden" name="_captcha" value="false">
+        <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
+    </form>
     </div>
 
     <!-- Footer -->
-    <footer>
+    <!-- <footer>
       <div class="footer-ribbon">
         <div class="ribbon-wrapper">
           <div class="ribbon-shadow"></div>
@@ -290,7 +191,7 @@
           <span class="designer">dragos doncea</span>
         </p>
       </div>
-    </footer>
+    </footer> -->
 
     <!-- Back to top btn -->
     <div id="progress">
@@ -302,6 +203,10 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/echipa.js"></script>
+
+
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="assets/js/galerie.js" defer></script>
   </body>
 </html>
