--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
               <li class="nav-item">
                 <a class="nav-link mx-lg-2" href="galerie.html">Galerie</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
+              </li>
             </ul>
           </div>
         </div>
