updated copyright and sponsors list

--- a/index.html
+++ b/index.html
@@ -338,8 +338,7 @@
       </div>
       <div class="footerBottom">
         <p>
-          Copyright &copy;2025; Designed and developed by
-          <span class="designer">dragos doncea</span>
+          Copyright &copy;2025
         </p>
       </div>
     </footer>
