added dedicated bttb.js

--- a/echipa.html
+++ b/echipa.html
@@ -299,5 +299,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/js/echipa.js"></script>
+    <script src="./assets/js/bttb.js"></script>
   </body>
 </html>
