--- a/rezultate.html
+++ b/rezultate.html
@@ -428,5 +428,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/js/rezultate.js"></script>
+    <script src="./assets/js/bttb.js"></script>
   </body>
 </html>
