--- a/blog.html
+++ b/blog.html
@@ -829,5 +829,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/js/blog.js"></script>
+    <script src="./assets/js/bttb.js"></script>
   </body>
 </html>
