--- a/galerie.html
+++ b/galerie.html
@@ -829,5 +829,6 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="assets/js/galerie.js" defer></script>
+    <script src="./assets/js/bttb.js"></script>
   </body>
 </html>
