--- a/index.html
+++ b/index.html
@@ -356,5 +356,6 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="assets/js/script.js" defer></script>
+    <script src="./assets/js/bttb.js"></script>
   </body>
 </html>
