--- a/formular.html
+++ b/formular.html
@@ -125,12 +125,12 @@
         </div> <br>
 
         <input type="hidden" name="_captcha" value="false">
-        <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
+        <button type="submit" class="btn btn-lg btn-dark btn-block">Trimite mail</button>
     </form>
     </div>
 
     <!-- Footer -->
-    <!-- <footer>
+    <footer id = 'ctcftr' style = "position: absolute; bottom: 0; width: 100%;">
       <div class="footer-ribbon">
         <div class="ribbon-wrapper">
           <div class="ribbon-shadow"></div>
@@ -139,8 +139,8 @@
           </div>
         </div>
       </div>
-      <div class="footerContainer">
-        <div class="socialIcons">
+      <div class="footerContainer" style = "padding-top: 55px; padding-bottom: 10px;">
+        <div class="socialIcons" style = "margin: 0;">
           <a
             href="https://www.instagram.com/zenith.cngm"
             class="d-inline-block mb-3"
@@ -173,25 +173,15 @@
               <i class="bi bi-envelope-at-fill me-1"></i> Mail
             </span>
           </a>
-
-          <a
-            href="https://hartaedu.ro/inovatie/clubul-de-robotica-zenith-are-nevoie-de-echipament-pentru-participarea-la-concursul-international-de-robotica-first-tech-challenge/ "
-            class="d-inline-block mb-3"
-            target="_blank"
-          >
-            <span class="badge bg-light text-dark fs-6 p-2">
-              <i class="bi bi-cash-stack"></i> Sustine-ne
-            </span>
-          </a>
+          
         </div>
       </div>
-      <div class="footerBottom">
-        <p>
-          Copyright &copy;2025; Designed and developed by
-          <span class="designer">dragos doncea</span>
+      <div class="footerBottom" style = "padding: 10px 0;">
+        <p style = "margin: 0;">
+          Copyright &copy;2025
         </p>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- Back to top btn -->
     <div id="progress">
