--- a/sponsori.html
+++ b/sponsori.html
@@ -34,7 +34,7 @@
   </head>
   <body class="custom-bg" id="top">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
+    <nav class="navbar navbar-expand-lg" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand me-auto" href="#"
           ><img
