update formular.html w/ css

--- a/formular.html
+++ b/formular.html
@@ -20,8 +20,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/bttb.css" />
-    <link rel="stylesheet" href="assets/css/galerie.css" />
+    <link rel="stylesheet" href="assets/css/formular.css" />
     <link rel="stylesheet" href="assets/css/navbar.css" />
     <link rel="stylesheet" href="assets/css/footer.css" />
     <link rel="stylesheet" href="assets/css/scroll-bar.css" />
@@ -107,8 +108,8 @@
 
     <!-- Contact page -->
     
-    <div class="container" style = "padding-top: 200px;">
-    <h1>Contactează-ne</h1>
+    <div class="container form-container">
+    <span class="custom-span">Contactează-ne</span>
     <form target="_blank" action="https://formsubmit.co/7826dc35be59c6cb00c94454cc1195eb" method="POST">
         <div class="form-group">
             <div class="form-row">
@@ -125,7 +126,7 @@
         </div> <br>
 
         <input type="hidden" name="_captcha" value="false">
-        <button type="submit" class="btn btn-lg btn-dark btn-block">Trimite mail</button>
+        <button type="submit" class="btn btn-lg btn-block form-button">Trimite mail</button>
     </form>
     </div>
 
@@ -193,10 +194,6 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-
-
-    <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="assets/js/galerie.js" defer></script>
+    <script src="assets/js/bttb.js"></script>
   </body>
 </html>
