update sponsori.css and footers

--- a/formular.html
+++ b/formular.html
@@ -174,7 +174,17 @@
               <i class="bi bi-envelope-at-fill me-1"></i> Mail
             </span>
           </a>
-          
+          <!-- Buton scos temporar
+          <a
+            href="https://hartaedu.ro/inovatie/clubul-de-robotica-zenith-are-nevoie-de-echipament-pentru-participarea-la-concursul-international-de-robotica-first-tech-challenge/ "
+            class="d-inline-block mb-3"
+            target="_blank"
+          >
+            <span class="badge bg-light text-dark fs-6 p-2">
+              <i class="bi bi-cash-stack"></i> Sustine-ne
+            </span>
+          </a>
+          -->
         </div>
       </div>
       <div class="footerBottom" style = "padding: 10px 0;">
@@ -183,7 +193,7 @@
         </p>
       </div>
     </footer>
-
+    
     <!-- Back to top btn -->
     <div id="progress">
       <span id="progress-value">&#x1F815</span>
@@ -194,6 +204,9 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="assets/js/script.js" defer></script>
     <script src="assets/js/bttb.js"></script>
   </body>
 </html>
