--- a/sponsori.html
+++ b/sponsori.html
@@ -106,7 +106,7 @@
     <!-- Parteneri -->
     <section class="parteneri p">
       <!-- Sponsori platinum -->
-      <div class="container py-5">
+      <div class="container py-5 platinum">
         <div class="section-title">
           <span class="custom-span">Sponsori platinum</span>
         </div>
@@ -151,7 +151,7 @@
       </div>
 
       <!-- Sponsori gold -->
-      <div class="container py-5">
+      <div class="container py-5 gold">
         <div class="section-title">
           <span class="custom-span">Sponsori gold</span>
         </div>
@@ -208,7 +208,7 @@
       </div>
 
       <!-- Sponsori silver -->
-      <div class="container py-5">
+      <div class="container py-5 silver">
         <div class="section-title">
           <span class="custom-span">Sponsori silver</span>
         </div>
@@ -277,7 +277,7 @@
       </div>
 
       <!-- Parteneri -->
-      <div class="container py-5">
+      <div class="container py-5 partener-bg-clr">
         <div class="section-title">
           <span class="custom-span">Partenerii noștri</span>
         </div>
@@ -299,7 +299,7 @@
                 <img
                   src="assets/images/Parteneri/Sigla_Asociatia_Universitatea_Copiilor.png"
                   alt=""
-                  class="grid-img"
+                  class="grid-img caz-special"
                 />
                 <a href="https://unico.org.ro/" target="_blank" class="grid-link">
                   Visit website
