--- a/rezultate.html
+++ b/rezultate.html
@@ -399,7 +399,7 @@
               <i class="bi bi-envelope-at-fill me-1"></i> Mail
             </span>
           </a>
-
+          <!-- Buton scos temporar
           <a
             href="https://hartaedu.ro/inovatie/clubul-de-robotica-zenith-are-nevoie-de-echipament-pentru-participarea-la-concursul-international-de-robotica-first-tech-challenge/ "
             class="d-inline-block mb-3"
@@ -409,6 +409,7 @@
               <i class="bi bi-cash-stack"></i> Sustine-ne
             </span>
           </a>
+          -->
         </div>
       </div>
       <div class="footerBottom">
