--- a/sponsori.html
+++ b/sponsori.html
@@ -128,7 +128,7 @@
               <img
                 src="assets/images/Sponsori/logo-anchor-grup.png"
                 alt=""
-                class="grid-img"
+                class="grid-img caz-special"
               />
               <a href="https://www.anchorgrup.ro" target="_blank" class="grid-link">
                   Visit website
