--- a/blog.html
+++ b/blog.html
@@ -800,6 +800,33 @@
               <i class="bi bi-envelope-at-fill me-1"></i> Mail
             </span>
           </a>
+          <a
+            href="https://www.facebook.com/share/14nknGnpCt/"
+            class="d-inline-block mb-3"
+            target="_blank"
+          >
+            <span class="badge bg-light text-dark fs-6 p-2">
+              <i class="bi bi-facebook me-1"></i> Facebook
+            </span>
+          </a>
+          <a
+            href="https://www.linkedin.com/in/clubul-de-robotic%C4%83-zenith-664100370/"
+            class="d-inline-block mb-3"
+            target="_blank"
+          >
+            <span class="badge bg-light text-dark fs-6 p-2">
+              <i class="bi bi-linkedin me-1"></i> Linkedin
+            </span>
+          </a>
+          <a
+            href="https://linktr.ee/zenith.cngm"
+            class="d-inline-block mb-3"
+            target="_blank"
+          >
+            <span class="badge bg-light text-dark fs-6 p-2">
+              <i class="bi bi-link-45deg me-1"></i> Linktree
+            </span>
+          </a>
           <!-- Buton scos temporar
           <a
             href="https://hartaedu.ro/inovatie/clubul-de-robotica-zenith-are-nevoie-de-echipament-pentru-participarea-la-concursul-international-de-robotica-first-tech-challenge/ "
