--- a/sponsori.html
+++ b/sponsori.html
@@ -138,7 +138,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/logo_mct.jpg"
+                src="assets/images/Sponsori/logo_mct.png"
                 alt=""
                 class="grid-img"
               />
@@ -159,7 +159,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Enayati_Medical_City.jpeg"
+                src="assets/images/Sponsori/Enayati_Medical_City.png"
                 alt=""
                 class="grid-img"
               />
@@ -195,7 +195,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Laser_RMC.jpg"
+                src="assets/images/Sponsori/Laser_RMC.png"
                 alt=""
                 class="grid-img"
               />
@@ -228,7 +228,7 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Simav.jpg"
+                src="assets/images/Sponsori/Simav_Print.png"
                 alt=""
                 class="grid-img"
               />
