--- a/galerie.html
+++ b/galerie.html
@@ -36,7 +36,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg" id="navbar">
       <div class="container-fluid">
-        <a class="navbar-brand me-auto" href="#"
+        <a class="navbar-brand me-auto" href="."
           ><img
             class="imagine-navbar"
             src="assets/images/Branding Zenith/Sigla_mov.png"
