--- a/blog.html
+++ b/blog.html
@@ -770,7 +770,7 @@
         <div class="socialIcons">
           <a
             href="https://www.instagram.com/zenith.cngm"
-            class="d-inline-block mb-3"
+            class="mb-3"
             target="_blank"
           >
             <span class="badge bg-light text-dark fs-6 p-2">
@@ -779,7 +779,7 @@
           </a>
           <a
             href="https://www.tiktok.com/@zenith.cngm"
-            class="d-inline-block mb-3"
+            class="mb-3"
             target="_blank"
           >
             <span class="badge bg-light text-dark fs-6 p-2">
@@ -788,21 +788,21 @@
           </a>
           <a
             href="https://www.youtube.com/@Zenith-CNGM"
-            class="d-inline-block mb-3"
+            class="mb-3"
             target="_blank"
           >
             <span class="badge bg-light text-dark fs-6 p-2">
               <i class="bi bi-youtube me-1"></i> Youtube
             </span>
           </a>
-          <a href="mailto:zenith.cngm@gmail.com" class="d-inline-block mb-3">
+          <a href="mailto:zenith.cngm@gmail.com" class="mb-3">
             <span class="badge bg-light text-dark fs-6 p-2">
               <i class="bi bi-envelope-at-fill me-1"></i> Mail
             </span>
           </a>
           <a
             href="https://www.facebook.com/share/14nknGnpCt/"
-            class="d-inline-block mb-3"
+            class="mb-3"
             target="_blank"
           >
             <span class="badge bg-light text-dark fs-6 p-2">
@@ -811,7 +811,7 @@
           </a>
           <a
             href="https://www.linkedin.com/in/clubul-de-robotic%C4%83-zenith-664100370/"
-            class="d-inline-block mb-3"
+            class="mb-3"
             target="_blank"
           >
             <span class="badge bg-light text-dark fs-6 p-2">
@@ -820,7 +820,7 @@
           </a>
           <a
             href="https://linktr.ee/zenith.cngm"
-            class="d-inline-block mb-3"
+            class="mb-3"
             target="_blank"
           >
             <span class="badge bg-light text-dark fs-6 p-2">
