--- a/galerie.html
+++ b/galerie.html
@@ -756,6 +756,7 @@
 
     <!-- Footer -->
     <footer>
+      <!--
       <div class="footer-ribbon">
         <div class="ribbon-wrapper">
           <div class="ribbon-shadow"></div>
@@ -764,85 +765,67 @@
           </div>
         </div>
       </div>
+      -->
       <div class="footerContainer">
-        <div class="socialIcons">
-          <a
-            href="https://www.instagram.com/zenith.cngm"
-            class="d-inline-block mb-3"
-            target="_blank"
-          >
-            <span class="badge bg-light text-dark fs-6 p-2">
-              <i class="bi bi-instagram me-1"></i> Instagram
-            </span>
-          </a>
-          <a
-            href="https://www.tiktok.com/@zenith.cngm"
-            class="d-inline-block mb-3"
-            target="_blank"
-          >
-            <span class="badge bg-light text-dark fs-6 p-2">
-              <i class="bi bi-tiktok me-1"></i> Tik Tok
-            </span>
-          </a>
-          <a
-            href="https://www.youtube.com/@Zenith-CNGM"
-            class="d-inline-block mb-3"
-            target="_blank"
-          >
-            <span class="badge bg-light text-dark fs-6 p-2">
-              <i class="bi bi-youtube me-1"></i> Youtube
-            </span>
-          </a>
-          <a href="mailto:zenith.cngm@gmail.com" class="d-inline-block mb-3">
-            <span class="badge bg-light text-dark fs-6 p-2">
-              <i class="bi bi-envelope-at-fill me-1"></i> Mail
-            </span>
-          </a>
-          <a
-            href="https://www.facebook.com/share/14nknGnpCt/"
-            class="d-inline-block mb-3"
-            target="_blank"
-          >
-            <span class="badge bg-light text-dark fs-6 p-2">
-              <i class="bi bi-facebook me-1"></i> Facebook
-            </span>
-          </a>
-          <a
-            href="https://www.linkedin.com/in/clubul-de-robotic%C4%83-zenith-664100370/"
-            class="d-inline-block mb-3"
-            target="_blank"
-          >
-            <span class="badge bg-light text-dark fs-6 p-2">
-              <i class="bi bi-linkedin me-1"></i> Linkedin
-            </span>
-          </a>
-          <a
-            href="https://linktr.ee/zenith.cngm"
-            class="d-inline-block mb-3"
-            target="_blank"
-          >
-            <span class="badge bg-light text-dark fs-6 p-2">
-              <i class="bi bi-link-45deg me-1"></i> Linktree
-            </span>
-          </a>
-          <!-- Buton scos temporar
-          <a
-            href="https://hartaedu.ro/inovatie/clubul-de-robotica-zenith-are-nevoie-de-echipament-pentru-participarea-la-concursul-international-de-robotica-first-tech-challenge/ "
-            class="d-inline-block mb-3"
-            target="_blank"
-          >
-            <span class="badge bg-light text-dark fs-6 p-2">
-              <i class="bi bi-cash-stack"></i> Sustine-ne
-            </span>
-          </a>
-          -->
+        <div class="footer-logo"></div>
+        <div class="copyright-text">
+          <p>
+            Copyright &copy;2025
+          </p>
+        </div>
+        <div class="d-flex justify-content-center align-items-center" style="width: 40%;">
+          <div class="socialIcons">
+            <a
+              href="https://www.instagram.com/zenith.cngm"
+              target="_blank"
+            >
+              <i class="bi bi-instagram me-1"></i>
+            </a>
+            <a
+              href="https://www.tiktok.com/@zenith.cngm"
+              target="_blank"
+            >
+              <i class="bi bi-tiktok me-1"></i>
+            </a>
+            <a
+              href="https://www.youtube.com/@Zenith-CNGM"
+              target="_blank"
+            >
+              <i class="bi bi-youtube me-1"></i>
+            </a>
+            <a
+              href="https://www.facebook.com/share/14nknGnpCt/"
+              target="_blank"
+            >
+              <i class="bi bi-facebook me-1"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/clubul-de-robotic%C4%83-zenith-664100370/"
+              target="_blank"
+            >
+              <i class="bi bi-linkedin me-1"></i>
+            </a>
+            <a
+              href="https://linktr.ee/zenith.cngm"
+              target="_blank"
+            >
+            <div class="linktree-icon"></div>
+            </a>
+            <!-- Buton scos temporar
+            <a
+              href="https://hartaedu.ro/inovatie/clubul-de-robotica-zenith-are-nevoie-de-echipament-pentru-participarea-la-concursul-international-de-robotica-first-tech-challenge/ "
+              class="d-inline-block mb-3"
+              target="_blank"
+            >
+              <span class="badge bg-light text-dark fs-6 p-2">
+                <i class="bi bi-cash-stack"></i> Sustine-ne
+              </span>
+            </a>
+            -->
+          </div>
         </div>
       </div>
-      <div class="footerBottom">
-        <p>
-          Copyright &copy;2025
-        </p>
-      </div>
+      
     </footer>
 
     <!-- Back to top btn -->
