--- a/sponsori.html
+++ b/sponsori.html
@@ -103,6 +103,7 @@
         </button>
       </div>
     </nav>
+
     <!-- Parteneri -->
     <section class="parteneri p">
       <!-- Sponsori platinum -->
@@ -114,12 +115,12 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Enpower_Energy.png"
+                src="assets/images/Sponsori/logo_mct.png"
                 alt=""
                 class="grid-img"
               />
-              <a href="https://enpower.ro" target="_blank" class="grid-link">
-                  Visit website
+              <a href="#" target="_blank" class="grid-link">
+
               </a>
             </div>
           </div>
@@ -131,19 +132,19 @@
                 class="grid-img caz-special"
               />
               <a href="https://www.anchorgrup.ro" target="_blank" class="grid-link">
-                  Visit website
+                  Website
               </a>
             </div>
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/logo_mct.png"
+                src="assets/images/Sponsori/Enpower_Energy.png"
                 alt=""
                 class="grid-img"
               />
-              <a href="#" target="_blank" class="grid-link">
-
+              <a href="https://enpower.ro" target="_blank" class="grid-link">
+                  Website
               </a>
             </div>
           </div>
@@ -159,12 +160,24 @@
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Enayati_Medical_City.png"
+                src="assets/images/Sponsori/Laser_RMC.png"
                 alt=""
                 class="grid-img"
               />
-              <a href="https://enayatimedicalcity.ro/" target="_blank" class="grid-link">
-                  Visit website
+              <a href="https://www.laser-rmc.ro" target="_blank" class="grid-link">
+                  Website
+              </a>  
+            </div>
+          </div>
+          <div class="col-6 col-sm-4 col-md-3">
+            <div class="partner-square">
+              <img
+                src="assets/images/Sponsori/Sharp_Solutions.svg"
+                alt=""
+                class="grid-img"
+              />
+              <a href="https://sharpsolutions.ro" target="_blank" class="grid-link">
+                  Website
               </a>
             </div>
           </div>
@@ -176,32 +189,20 @@
                 class="grid-img"
               />
               <a href="https://modular.services/" target="_blank" class="grid-link">
-                  Visit website
+                  Website
               </a>
             </div>
           </div>
           <div class="col-6 col-sm-4 col-md-3">
             <div class="partner-square">
               <img
-                src="assets/images/Sponsori/Sharp_Solutions.svg"
+                src="assets/images/Sponsori/Enayati_Medical_City.png"
                 alt=""
                 class="grid-img"
               />
-              <a href="https://sharpsolutions.ro" target="_blank" class="grid-link">
-                  Visit website
+              <a href="https://enayatimedicalcity.ro/" target="_blank" class="grid-link">
+                  Website
               </a>
-            </div>
-          </div>
-          <div class="col-6 col-sm-4 col-md-3">
-            <div class="partner-square">
-              <img
-                src="assets/images/Sponsori/Laser_RMC.png"
-                alt=""
-                class="grid-img"
-              />
-              <a href="https://www.laser-rmc.ro" target="_blank" class="grid-link">
-                  Visit website
-              </a>  
             </div>
           </div>
         </div>
@@ -221,7 +222,7 @@
                 class="grid-img"
               />
               <a href="https://www.pieserobotica.ro/" target="_blank" class="grid-link">
-                  Visit website
+                  Website
               </a>
             </div>
           </div>
@@ -233,7 +234,7 @@
                 class="grid-img"
               />
               <a href="https://simav.ro/" target="_blank" class="grid-link">
-                Visit website
+                Website
               </a>
             </div>
           </div>
@@ -245,7 +246,7 @@
                 class="grid-img"
               />
               <a href="https://www.icpe.ro/ro/ssicpe/" target="_blank" class="grid-link">
-                  Visit website
+                  Website
               </a>
             </div>
           </div>
@@ -257,7 +258,7 @@
                 class="grid-img"
               />
               <a href="https://indcar.es/en/" target="_blank" class="grid-link">
-                  Visit website
+                  Website
               </a>
             </div>
           </div>
@@ -269,7 +270,7 @@
                 class="grid-img"
               />
               <a href="https://www.facebook.com/quasarcomex/" target="_blank" class="grid-link">
-                  Visit website
+                  Website
               </a>
             </div>
           </div>
@@ -290,7 +291,7 @@
                 class="grid-img"
               />
               <a href="https://www.moisil.ro/" target="_blank" class="grid-link">
-                Visit website
+                Website
               </a>
             </div>
           </div>
@@ -302,7 +303,7 @@
                   class="grid-img caz-special"
                 />
                 <a href="https://unico.org.ro/" target="_blank" class="grid-link">
-                  Visit website
+                  Website
                 </a>
             </div>
           </div>
