--- a/formular.html
+++ b/formular.html
@@ -258,7 +258,7 @@
       
       <!-- Back to top btn -->
       <div id="progress">
-        <span id="progress-value">&#x1F815</span>
+        <span id="progress-value">&#8593;</span>
       </div>
     </div>
     <script
