--- a/sponsori.html
+++ b/sponsori.html
@@ -412,7 +412,7 @@
 
     <!-- Back to top btn -->
     <div id="progress">
-      <span id="progress-value">&#x1F815</span>
+      <span id="progress-value">&#8593;</span>
     </div>
 
     <script
