added video to home page

--- a/index.html
+++ b/index.html
@@ -131,6 +131,18 @@
       </div>
     </section>
 
+    <!-- Video -->
+    <section class="about-us">
+      <div class="abt-us-video">
+        <iframe
+          src="https://www.youtube.com/embed/TSIH1kZF1H0"
+          title="Țintind spre Zenith - Experiența noastră"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
+        ></iframe>
+      </div>
+    </section>
     <!-- Mission -->
     <section class="about-us">
       <div class="container-a">
