--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
     <!-- Video -->
     <section class="about-us">
       <div class="abt-us-video">
+        <div class="video-border">
         <iframe
           src="https://www.youtube.com/embed/TSIH1kZF1H0"
           title="Țintind spre Zenith - Experiența noastră"
@@ -141,6 +142,7 @@
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
         ></iframe>
+        </div>
       </div>
     </section>
     <!-- Mission -->
