--- a/echipa.html
+++ b/echipa.html
@@ -64,15 +64,13 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
+                <a class="nav-link mx-lg-2" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
                 <a
                   class="nav-link mx-lg-2 active"
                   aria-current="page"
-                  href="index.html"
-                  >Home</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="echipa.html">Echipă</a>
+                  href="echipa.html">Echipă</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link mx-lg-2" href="blog.html">Activitate</a>
