--- a/formular.html
+++ b/formular.html
@@ -93,12 +93,7 @@
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item">
-                  <a
-                    class="nav-link mx-lg-2 active"
-                    aria-current="page"
-                    href="index.html"
-                    >Home</a
-                  >
+                  <a class="nav-link mx-lg-2" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link mx-lg-2" href="echipa.html">Echipă</a>
@@ -116,7 +111,10 @@
                   <a class="nav-link mx-lg-2" href="galerie.html">Galerie</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
+                  <a
+                    class="nav-link mx-lg-2 active"
+                    aria-current="page"
+                    href="formular.html">Contact</a>
                 </li>
               </ul>
             </div>
