--- a/galerie.html
+++ b/galerie.html
@@ -64,12 +64,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a
-                  class="nav-link mx-lg-2 active"
-                  aria-current="page"
-                  href="index.html"
-                  >Home</a
-                >
+                <a class="nav-link mx-lg-2" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link mx-lg-2" href="echipa.html">Echipă</a>
@@ -84,7 +79,10 @@
                 <a class="nav-link mx-lg-2" href="sponsori.html">Sponsori</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="galerie.html">Galerie</a>
+                <a  
+                  class="nav-link mx-lg-2 active"
+                  aria-current="page"
+                  href="galerie.html">Galerie</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
