--- a/rezultate.html
+++ b/rezultate.html
@@ -64,12 +64,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a
-                  class="nav-link mx-lg-2 active"
-                  aria-current="page"
-                  href="index.html"
-                  >Home</a
-                >
+                <a class="nav-link mx-lg-2" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link mx-lg-2" href="echipa.html">Echipă</a>
@@ -78,7 +73,10 @@
                 <a class="nav-link mx-lg-2" href="blog.html">Activitate</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="rezultate.html">Rezultate</a>
+                <a
+                  class="nav-link mx-lg-2 active"
+                  aria-current="page"
+                  href="rezultate.html">Rezultate</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link mx-lg-2" href="sponsori.html">Sponsori</a>
