--- a/index.html
+++ b/index.html
@@ -106,9 +106,12 @@
 
     <!-- Hero section -->
     <section class="hero-section">
-      <div
-        class="container d-flex align-items-center justify-content-center fs-1 text-white flex-column"
-      ></div>
+      <div class="animatie-text">
+        <h1>Visions above ground</h1>
+      </div>
+      <div class="animatie-robot">
+        <div class="render-robot"></div>
+      </div>
     </section>
 
     <!-- About us -->
