--- a/index.html
+++ b/index.html
@@ -118,8 +118,20 @@
         <div class="animate-robot-on-load">
           <div class="render-robot"></div>
         </div>
+
+        <div class = 'hexagon'></div> <div class = 'hexagon'></div>
+        <div class = 'hexagon'></div> <div class = 'hexagon'></div>
+        <div class = 'hexagon'></div> <div class = 'hexagon'></div>
+        <div class = 'hexagon'></div> <div class = 'hexagon'></div>
+        <div class = 'hexagon'></div> <div class = 'hexagon'></div>
+        <div class = 'hexagon'></div> <div class = 'hexagon'></div>
+        <div class = 'hexagon'></div> <div class = 'hexagon'></div>
+        <div class = 'hexagon'></div> <div class = 'hexagon'></div>
+        <div class = 'hexagon'></div> <div class = 'hexagon'></div>
+        <div class = 'hexagon'></div> <div class = 'hexagon'></div>
+
       </div>
-      <div class="wave-container">
+      <div class="wave-container" style = 'z-index: 3;'>
         <div class="wave1">
           <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
               <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,46.29V0Z" opacity=".25" class="shape-fill"></path>
@@ -135,6 +147,8 @@
           </svg>
         </div>
       </div>
+
+      
     </section>
     
     <!-- About us -->
@@ -399,5 +413,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="assets/js/script.js" defer></script>
     <script src="./assets/js/bttb.js"></script>
+    <script src="./assets/js/hexagoane.js"></script>
   </body>
 </html>
