--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     <!-- Hero section -->
     <section class="hero-section">
       <div class="main-hero">
-        <div class="animate-text-on-load">
-          <h1>Visions <br> above <br> ground</h1>
+        <div class="animate-text-on-load" style = 'text-align: center; font-size: 120%;'>
+          <h1>Visions above <br> ground</h1>
         </div>
         <div class="animate-robot-on-load">
           <div class="render-robot"></div>
