--- a/echipa.html
+++ b/echipa.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/bttb.css" />
     <link rel="stylesheet" href="assets/css/echipa.css" />
     <link rel="stylesheet" href="assets/css/navbar.css" />
@@ -30,6 +31,11 @@
       href="assets/images/about.png"
       type="image/x-icon"
     />
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    
     <title>ZENITH</title>
   </head>
   <body class="custom-bg" id="top">
