--- a/formular.html
+++ b/formular.html
@@ -140,7 +140,7 @@
       <main>
         <div class="container form-container">
         <span class="custom-span">Contactează-ne</span>
-        <form target="_blank" action="https://formsubmit.co/7826dc35be59c6cb00c94454cc1195eb" method="POST">
+        <form target="_blank" action="https://formsubmit.co/el/zacuka" method="POST">
             <div class="form-group">
                 <div class="form-row">
                     <div class="col">
