--- a/blog.html
+++ b/blog.html
@@ -40,7 +40,7 @@
   </head>
   <body class="custom-bg" id="top">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg" id="navbar">
+    <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand me-auto" href="."
           ><img
@@ -107,7 +107,7 @@
         </button>
       </div>
     </nav>
-
+    
     <!-- Blog -->
     <section id="blog">
       <div class="blog-heading">
