--- a/echipa.html
+++ b/echipa.html
@@ -40,7 +40,7 @@
   </head>
   <body class="custom-bg" id="top">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg " id="navbar">
+    <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
       <div class="container-fluid">
         <a class="navbar-brand me-auto" href="."
           ><img
