--- a/index.html
+++ b/index.html
@@ -134,21 +134,19 @@
       <div class="wave-container" style = 'z-index: 3;'>
         <div class="wave1">
           <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-              <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,46.29V0Z" opacity=".25" class="shape-fill"></path>
-              <path d="M0,0 V15.81 C13,36.92,27.64,56.86,47.69,72.05 C99.41,111.27,165,111,224.58,91.58 C255.73,81.43,284.67,65.51,314.25,51.78 C355.17,32.78,398.98,5.78,445.08,2.11 C481.34,-0.74,515.98,11.53,543.68,33.67 C575.45,59.06,606,95.67,647.31,106.67 C687.75,117.46,728.66,99.98,766.44,82.39 S841.6,43.39,883.36,39.34 C943.09,33.49,970.64,62.22,990.26,66.18 C1082.46,86.84,1111.26,84.35,1139.35,70.68 C1160,59.79,1180.35,0,1200,15.81 V0 Z" opacity=".5" class="shape-fill"></path>
-              <path d="M0,0 V5.63 C149.93,59,314.09,71.32,475.83,42.57C518.83,34.93,560.06,22.45,603.44,16.11 C662.44,7.48,715.92,28.35,769,51.51 C827.93,77.22,886,95.24,951.2,90C1037.73,83,1123.66,44.29,1200,5.63V0Z" class="shape-fill"></path>
+              <path d="M0,0V0C150,60,225,100,300,50C350,20,400,0,450,20C500,60,562.5,100,625,50C675,20,725,0,775,20C825,60,887.5,100,950,50C1000,0,1050,0,1100,0V0Z" opacity=".25" class="shape-fill"></path>
+              <path d="M0,0V0C0,0,110,0,220,60C330,120,440,30,550,10C660,0,775,0,880,60C990,120,1100,0,1200,0V0Z" opacity=".5" class="shape-fill"></path>
+              <path d="M0,0V0C0,0,150,0,300,45C450,90,600,120,750,90C900,45,1050,0,1200,0V0Z" class="shape-fill"></path>
           </svg>
         </div>
         <div class="wave2">
           <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
-              <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,46.29V0Z" opacity=".25" class="shape-fill"></path>
-              <path d="M0,0 V15.81 C13,36.92,27.64,56.86,47.69,72.05 C99.41,111.27,165,111,224.58,91.58 C255.73,81.43,284.67,65.51,314.25,51.78 C355.17,32.78,398.98,5.78,445.08,2.11 C481.34,-0.74,515.98,11.53,543.68,33.67 C575.45,59.06,606,95.67,647.31,106.67 C687.75,117.46,728.66,99.98,766.44,82.39 S841.6,43.39,883.36,39.34 C943.09,33.49,970.64,62.22,990.26,66.18 C1082.46,86.84,1111.26,84.35,1139.35,70.68 C1160,59.79,1180.35,0,1200,15.81 V0 Z" opacity=".5" class="shape-fill"></path>
-              <path d="M0,0 V5.63 C149.93,59,314.09,71.32,475.83,42.57 C518.83,34.93,560.06,22.45,603.44,16.11 C662.44,7.48,715.92,28.35,769,51.51 C827.93,77.22,886,95.24,951.2,90 C1037.73,83,1123.66,44.29,1200,5.63V0Z" class="shape-fill"></path>
+              <path d="M0,0V0C150,60,225,100,300,50C350,20,400,0,450,20C500,60,562.5,100,625,50C675,20,725,0,775,20C825,60,887.5,100,950,50C1000,0,1050,0,1100,0V0Z" opacity=".25" class="shape-fill"></path>
+              <path d="M0,0V0C0,0,110,0,220,60C330,120,440,30,550,10C660,0,775,0,880,60C990,120,1100,0,1200,0V0Z" opacity=".5" class="shape-fill"></path>
+              <path d="M0,0V0C0,0,150,0,300,45C450,90,600,120,750,90C900,45,1050,0,1200,0V0Z" class="shape-fill"></path>
           </svg>
         </div>
       </div>
-
-      
     </section>
     
     <!-- About us -->
