update stuff and shau

--- a/rezultate.html
+++ b/rezultate.html
@@ -133,6 +133,7 @@
             />
           </div>
         </div>
+        <!--
         <div class="card-s">
           <div class="card-content">
             <div class="number" data-val="5">0</div>
@@ -146,10 +147,11 @@
             />
           </div>
         </div>
+        -->
         <div class="card-s">
           <div class="card-content">
-            <div class="number" data-val="15">0</div>
-            <div class="card-name">Sponsori</div>
+            <div class="number" data-val="14">0</div>
+            <div class="card-name">Sponsori & parteneri</div>
           </div>
           <div class="icon-box">
             <img
