--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           aria-labelledby="offcanvasNavbarLabel"
         >
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+            <!--<h5 class="offcanvas-title" id="offcanvasNavbarLabel">
               <img
                 class="imagine-navbar"
                 src="assets/images/Branding Zenith/Sigla_mov.png"
               />
-            </h5>
+            </h5>-->
             <button
               type="button"
               class="btn-close"
