basic thankyou + sageata

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <div class = 'flx lerpX'>
                     <img style = 'transform: scale(0);' 
                         id = 'arrow'
-                        src = 'assets/images/sagetoasa.png'
+                        src = 'assets/images/sageata.svg'
                         alt = 'arr'
                         width = '500' height = '500'
                     >
