--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
               </li>
               <li>
-                <button id="theme-toggle" class="btn btn-outline-secondary btn-sm" aria-label="Toggle dark mode">
+                <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
                   <i id="theme-icon" class="bi bi-moon"></i>
                 </button>
               </li>
