--- a/formular.html
+++ b/formular.html
@@ -123,6 +123,11 @@
                     aria-current="page"
                     href="formular.html">Contact</a>
                 </li>
+                <li>
+                  <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
+                    <i id="theme-icon"></i>
+                  </button>
+                </li>
               </ul>
             </div>
           </div>
@@ -246,9 +251,10 @@
     ></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="assets/js/script.js" defer></script>
-    <script src="assets/js/bttb.js"></script>
-    
+    <script src="./assets/js/script.js" defer></script>
+    <script src="./assets/js/bttb.js"></script>
+    <script src="./assets/js/dark_mode.js"></script>
+
     <script src = 'assets/js/submitform.js'></script>
 
   </body>
