--- a/galerie.html
+++ b/galerie.html
@@ -93,6 +93,11 @@
               <li class="nav-item">
                 <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
               </li>
+              <li>
+                <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
+                  <i id="theme-icon"></i>
+                </button>
+              </li>
             </ul>
           </div>
         </div>
@@ -1004,5 +1009,6 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="assets/js/galerie.js" defer></script>
     <script src="./assets/js/bttb.js"></script>
+    <script src="./assets/js/dark_mode.js"></script>
   </body>
 </html>
