--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </li>
               <li>
                 <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
-                  <i id="theme-icon" class="bi bi-moon"></i>
+                  <i id="theme-icon"></i>
                 </button>
               </li>
             </ul>
@@ -179,13 +179,7 @@
     <section class="about-us">
       <div class="abt-us-video">
         <div class="video-border">
-        <iframe
-          src="https://www.youtube.com/embed/TSIH1kZF1H0"
-          title="Țintind spre Zenith - Experiența noastră"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          referrerpolicy="strict-origin-when-cross-origin" allowfullscreen
-        ></iframe>
+          <iframe width="1337" height="752" src="https://www.youtube.com/embed/TSIH1kZF1H0" title="Țintind spre Zenith - Experiența noastră" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
     </section>
@@ -470,5 +464,6 @@
     <script src="./assets/js/bttb.js"></script>
     <script src="./assets/js/hexagoane.js"></script>
     <script src="./assets/js/sovazenith.js"></script>
+    <script src="./assets/js/dark_mode.js"></script>
   </body>
 </html>
