--- a/blog.html
+++ b/blog.html
@@ -93,6 +93,11 @@
               <li class="nav-item">
                 <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
               </li>
+              <li>
+                <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
+                  <i id="theme-icon"></i>
+                </button>
+              </li>
             </ul>
           </div>
         </div>
@@ -836,5 +841,6 @@
     ></script>
     <script src="./assets/js/blog.js"></script>
     <script src="./assets/js/bttb.js"></script>
+    <script src="./assets/js/dark_mode.js"></script>
   </body>
 </html>
