--- a/thank-you.html
+++ b/thank-you.html
@@ -5,7 +5,11 @@
   <title>Thank You</title>
 </head>
 <body>
-  <h1>Thank you! Your message has been sent.</h1>
-  <a href="/">Go back home</a>
+  <!--navbar-->
+  <main class="d-flex flex-grow-1">
+    <h1>Thank you! Your message has been sent.</h1>
+    <a href="/">Go back home</a>
+  </main>
+  <!--footer-->
 </body>
 </html>
