--- a/echipa.html
+++ b/echipa.html
@@ -119,13 +119,6 @@
         <div class="image-a">
           <img src="assets/images/Echipa/IMG_0437.JPG" alt="" />
         </div>
-        <div class="text-about">
-          <div class="text-desc">
-            <p>
-              Faceți cunoștință cu liceeni pasionați de ştiinţele exacte, dornici să lucreze în echipă pentru a învăţa şi pentru a încuraja în continuare elevii din liceul nostru să se implice, depăşindu-şi limitele!
-            </p>
-          </div>
-        </div>
       </div>
     </section>
 
@@ -347,8 +340,9 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
+    <script src="./assets/js/navbar.js"></script>
     <script src="./assets/js/echipa.js"></script>
     <script src="./assets/js/bttb.js"></script>
-    <scripr src="./assets/js/dark_mode.js"></scripr>
+    <script src="./assets/js/dark_mode.js"></script>
   </body>
 </html>
