--- a/galerie.html
+++ b/galerie.html
@@ -1007,6 +1007,8 @@
     ></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <script src="./assets/js/navbar.js"></script>
     <script src="assets/js/galerie.js" defer></script>
     <script src="./assets/js/bttb.js"></script>
     <script src="./assets/js/dark_mode.js"></script>
