--- a/thank-you.html
+++ b/thank-you.html
@@ -195,7 +195,7 @@
     </div>
   </footer>
 
-  
-    <script src="./assets/js/dark_mode.js"></script>
+  <script src="./assets/js/navbar.js"></script>
+  <script src="./assets/js/dark_mode.js"></script>
 </body>
 </html>
